Add option to retrieve an ILS stretch factor per band.  Option is:
config.fm.instrument.ils_func.retrieve_bands = {true, true, true, true}

where in this case there are 4 bands.

--- a/lib/RegisterOutput/register_output.am
+++ b/lib/RegisterOutput/register_output.am
@@ -21,6 +21,10 @@ fullphysicsinc_HEADERS += @outsrc@/ground_brdf_output.h
 libfp_la_SOURCES += @outsrc@/ground_brdf_output.cc
 fullphysicsinc_HEADERS += @outsrc@/dispersion_polynomial_output.h
 libfp_la_SOURCES += @outsrc@/dispersion_polynomial_output.cc
+fullphysicsinc_HEADERS += @outsrc@/ils_table_linear_output.h
+libfp_la_SOURCES += @outsrc@/ils_table_linear_output.cc
+fullphysicsinc_HEADERS += @outsrc@/ils_table_log_output.h
+libfp_la_SOURCES += @outsrc@/ils_table_log_output.cc
 fullphysicsinc_HEADERS += @outsrc@/stokes_coefficient_fraction_output.h
 libfp_la_SOURCES += @outsrc@/stokes_coefficient_fraction_output.cc
 fullphysicsinc_HEADERS += @outsrc@/zero_offset_waveform_output.h
