Initial implementation of the scaled coxmunk BRDF.

--- a/lib/Implementation/implementation.am
+++ b/lib/Implementation/implementation.am
@@ -80,12 +80,16 @@ fullphysicsinc_HEADERS += @implsrc@/level_1b_cache.h
 libfp_la_SOURCES += @implsrc@/level_1b_cache.cc
 fullphysicsinc_HEADERS += @implsrc@/absorber_absco.h
 libfp_la_SOURCES += @implsrc@/absorber_absco.cc
+fullphysicsinc_HEADERS += @implsrc@/ground_brdf_weight.h
+libfp_la_SOURCES += @implsrc@/ground_brdf_weight.cc
 fullphysicsinc_HEADERS += @implsrc@/ground_lambertian.h
 libfp_la_SOURCES += @implsrc@/ground_lambertian.cc
 fullphysicsinc_HEADERS += @implsrc@/ground_coxmunk.h
 libfp_la_SOURCES += @implsrc@/ground_coxmunk.cc
 fullphysicsinc_HEADERS += @implsrc@/ground_coxmunk_plus_lambertian.h
 libfp_la_SOURCES += @implsrc@/ground_coxmunk_plus_lambertian.cc
+fullphysicsinc_HEADERS += @implsrc@/ground_coxmunk_scaled.h
+libfp_la_SOURCES += @implsrc@/ground_coxmunk_scaled.cc
 fullphysicsinc_HEADERS += @implsrc@/ground_brdf.h
 libfp_la_SOURCES += @implsrc@/ground_brdf.cc
 libfp_la_SOURCES += @implsrc@/brdf_functions.F90
