--- a/lib/RegisterOutput/register_output.am
+++ b/lib/RegisterOutput/register_output.am
@@ -11,12 +11,16 @@ libfp_la_SOURCES += @outsrc@/pressure_output.cc
 fullphysicsinc_HEADERS += @outsrc@/pressure_output.h
 libfp_la_SOURCES += @outsrc@/altitude_output.cc
 fullphysicsinc_HEADERS += @outsrc@/altitude_output.h
+fullphysicsinc_HEADERS += @outsrc@/ground_brdf_weight_output.h
+libfp_la_SOURCES += @outsrc@/ground_brdf_weight_output.cc
 fullphysicsinc_HEADERS += @outsrc@/ground_lambertian_output.h
 libfp_la_SOURCES += @outsrc@/ground_lambertian_output.cc
 fullphysicsinc_HEADERS += @outsrc@/ground_coxmunk_output.h
 libfp_la_SOURCES += @outsrc@/ground_coxmunk_output.cc
 fullphysicsinc_HEADERS += @outsrc@/ground_coxmunk_plus_lambertian_output.h
 libfp_la_SOURCES += @outsrc@/ground_coxmunk_plus_lambertian_output.cc
+fullphysicsinc_HEADERS += @outsrc@/ground_coxmunk_scaled_output.h
+libfp_la_SOURCES += @outsrc@/ground_coxmunk_scaled_output.cc
 fullphysicsinc_HEADERS += @outsrc@/ground_brdf_output.h
 libfp_la_SOURCES += @outsrc@/ground_brdf_output.cc
 fullphysicsinc_HEADERS += @outsrc@/dispersion_polynomial_output.h
